# ntfs_prototype

./: Cargo.toml  LICENSE  README.md  TODO.md
lib/ntfs_mft/: Cargo.toml
lib/ntfs_mft/src/: common.rs  direct_volume_reader.rs  lib.rs  mft_parser.rs  mft_types.rs  ntfs_file_reader.rs  slice_utils.rs
src/: common.rs  direct_volume_reader.rs  display_record.rs  main.rs  mft_parser.rs  mft_types.rs  ntfs_file_reader.rs
