[package]
name = "ntfs-mft-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
encoding_rs = "0.8"
colored = "2"

[dependencies.ntfs-mft]
path = "lib/ntfs_mft"
